# crow-agent

./: .gitmodules  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  EDIT_TOOL_PLAN.md  PLAN-agent-tools-coagents.md  README.md  TESTING_PLAN.md  TEST_PLAN.md  TODO.md  TOOLS_PLAN.md  TOOL_COMPARISON.md
.crow_logs/: crow_agent.log.2025-12-07  telemetry.db
doc/: book.toml
doc/src/: SUMMARY.md  introduction.md
doc/src/acp/: cancellation.md  sessions.md  tool-calls.md
doc/src/architecture/: rig-integration.md
doc/src/development/: building.md  getting-started.md
doc/src/telemetry/: hooks.md  opentelemetry.md
doc/src/testing/: manual-scripts.md
docs/: AGENT_CONFIG_ARCHITECTURE.md  CROW_AGENT_REWRITE_ACP.md  DUAL_AGENT_ARCHITECTURE.md
docs/src/: introduction.md
docs/src/acp/: overview.md  streaming.md
docs/src/architecture/: overview.md  rig-fork.md
docs/src/development/: debugging.md  getting-started.md
docs/src/telemetry/: overview.md
docs/src/testing/: acp-testing.md  overview.md
scripts/: test_acp_basic.py  test_acp_cancel.py  test_acp_multi_turn.py  test_full_workflow.py
src/: acp.rs  agent.rs  auth.rs  config.rs  events.rs  hooks.rs  lib.rs  main.rs  message.rs  snapshot.rs  telemetry.rs  templates.rs  tool.rs  trace_layer.rs
src/agent/: base.rs  builtins.rs  config.rs  config_loader.rs  control_flow.rs  fixtures.rs  mod.rs  prompt.rs  registry.rs
src/lsp/: client.rs  mod.rs
src/prompts/: anthropic-20250930.txt  anthropic.txt  beast.txt  codex.txt  copilot-gpt-5.txt  gemini.txt  polaris.txt  qwen.txt
src/provider/: client.rs  config.rs  mod.rs
src/tools/: bash.rs  diagnostics.rs  edit_file.rs  fetch.rs  find_path.rs  grep.rs  list_directory.rs  mod.rs  now.rs  output.rs  read_file.rs  task.rs  task_complete.rs  terminal.rs  thinking.rs  todo.rs  web_search.rs  write_file.rs
src/tools2/: bash.rs  edit.rs  fetch.rs  find_path.rs  grep.rs  list_directory.rs  mod.rs  read_file.rs  task.rs  task_complete.rs  todo.rs  web_search.rs
tests/e2e/: TEST_AGENTS.md  test_crow_e2e.sh
tests/e2e/tests/: 01_bash.sh  02_read.sh  03_edit.sh  04_grep.sh  05_find.sh  06_list.sh  07_write.sh  08_errors.sh  09_workflow.sh  README.md
